feat: 🎸 process dropdown component

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -22,7 +22,7 @@ $font-family: (
   --shadow-5: 0 18px 56px rgba(0, 0, 0, 0.16), 0 4px 12px rgba(0, 0, 0, 0.16);
 
   // Utils
-  --u-duration: 0.2s;
+  --u-dur: 0.2s;
   --u-gap: 8px;
 
   // Layouts
