--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -42,6 +42,12 @@
   --c-text-dark-3: rgba(235, 235, 235, 0.38);
   --c-text-dark-4: rgba(235, 235, 235, 0.18);
 
+  --c-blue: #1f80ff;
+  --c-blue-light: #3ab6ff;
+  --c-blue-lighter: #55e2ff;
+  --c-blue-dark: #1371ed;
+  --c-blue-darker: #1844df;
+
   --c-green: #1d9a6c;
   --c-green-light: #39a96b;
   --c-green-lighter: #56b870;
