feat: 🎸 left sidebar search components

--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -47,24 +47,28 @@
   --c-blue-lighter: #55e2ff;
   --c-blue-dark: #1371ed;
   --c-blue-darker: #1844df;
+  --c-blue-op: rgba(62, 113, 243, 0.1);
 
   --c-green: #1d9a6c;
   --c-green-light: #39a96b;
   --c-green-lighter: #56b870;
   --c-green-dark: #188977;
   --c-green-darker: #137177;
+  --c-green-op: rgba(43, 180, 74, 0.15);
 
   --c-yellow: #ffc517;
   --c-yellow-light: #fcd253;
   --c-yellow-lighter: #fcfc7c;
   --c-yellow-dark: #e0ad15;
   --c-yellow-darker: #ad850e;
+  --c-yellow-op: rgba(255, 204, 0, 0.15);
 
   --c-red: #d90429;
   --c-red-light: #ef233c;
   --c-red-lighter: #fd1d7c;
   --c-red-dark: #cd2d3f;
   --c-red-darker: #ab2131;
+  --c-red-op: rgba(235, 40, 51, 0.1);
 }
 
 /**
