feat: 🎸 add sidebar resizer

--- a/src/styles/palette.scss
+++ b/src/styles/palette.scss
@@ -28,7 +28,7 @@
   --c-indigo-darker: #14212e;
 
   --c-divider-light-1: rgba(60, 60, 60, 0.29);
-  --c-divider-light-2: rgba(60, 60, 60, 0.12);
+  --c-divider-light-2: #e1e2e6;
   --c-divider-dark-1: rgba(84, 84, 84, 0.65);
   --c-divider-dark-2: rgba(84, 84, 84, 0.48);
 
