--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,6 +27,7 @@ html {
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   direction: ltr;
+  user-select: auto;
   -webkit-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
