--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -35,4 +35,5 @@ $font-family: (
   // MSMainContainer Layouts
   --ms-left-sidebar-width: 290px;
   --ms-left-sidebar-outer-board-height: 60px;
+  --ms-left-central-banner-height: var(--ms-left-sidebar-outer-board-height);
 }
