feat: 🎸 规范部分项目组成

--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -36,4 +36,5 @@ $font-family: (
   --ms-left-sidebar-width: 290px;
   --ms-left-sidebar-outer-board-height: 60px;
   --ms-left-central-banner-height: var(--ms-left-sidebar-outer-board-height);
+  --ms-space-input-container-height: 40px;
 }
