feat: 🎸 初步实现发送消息功能

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -63,3 +63,14 @@ body {
   justify-content: center;
   align-items: center;
 }
+
+// Vue全局过度
+.scale-enter-active,
+.scale-leave-active {
+  transition: all 0.15s ease;
+}
+.scale-enter-from,
+.scale-leave-to {
+  opacity: 0;
+  transform: scale(0.996);
+}
